--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   dtsk:
-    image: alexmikelov/dtsk-admin:prod
+    image: alexmikelov/dtsk-admin:0.0.1
     restart: always
     env_file: .env
     environment:
