--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Build Docker image
-        run: docker build --build-arg NODE_ENV=production --build-arg STRAPI_URL=http://dtsk.ru -t a-mikelov/dtsk-admin:prod -f Dockerfile.prod .
+        run: docker build --build-arg NODE_ENV=production --build-arg STRAPI_URL=http://dtsk.ru -t alexmikelov/dtsk-admin:0.0.1 -f Dockerfile.prod .
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
