--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@strapi/plugin-users-permissions": "4.8.2",
     "@strapi/strapi": "4.8.2",
     "better-sqlite3": "8.0.1",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "strapi-plugin-responsive-image": "^1.0.1"
   },
   "author": {
     "name": "A Strapi developer"
