--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@strapi/plugin-users-permissions": "4.8.2",
     "@strapi/strapi": "4.8.2",
     "better-sqlite3": "8.0.1",
+    "nodemailer": "^6.9.1",
     "pg": "^8.10.0",
-    "strapi-plugin-responsive-image": "^1.0.1"
+    "strapi-plugin-responsive-image": "^1.0.1",
+    "strapi-plugin-populate-deep": "^3.0.0"
   },
   "author": {
     "name": "A Strapi developer"
