--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-users-permissions": "4.8.2",
     "@strapi/provider-email-nodemailer": "^4.12.5",
     "@strapi/strapi": "4.8.2",
+    "axios": "^1.5.0",
     "better-sqlite3": "8.0.1",
     "nodemailer": "^6.9.1",
     "pg": "^8.10.0",
